<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/choose_order_type"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RadioButton
            android:id="@+id/az"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/az"
            android:text="@string/by_alphabet" />

        <RadioButton
            android:id="@+id/town"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:drawableStart="@drawable/location"
            android:text="@string/by_town" />


    </RadioGroup>

</LinearLayout>